<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mini_tof</name>
  <version>0.1.0</version>
  <description>ROS 2 Package for interfacing with miniature ToF sensors</description>

  <maintainer email="cpsiff@gmail.com">Carter Sifferman</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/uwgraphics/mini_tof</url>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-pyqtgraph</exec_depend>
  <!-- Also requires pyqt6 but that's not in rosdep and it's installed automatically by pyqtgraph -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
